Fix Notepad2 unusable on mobile devices #234

--- a/src/app/notepad2/notepad2.component.scss
+++ b/src/app/notepad2/notepad2.component.scss
@@ -3,3 +3,7 @@
     height: calc(100vh - 80px);
     width: 360px;
 }
+
+.sidebar-toggle {
+    background-color: rgba($color: #ffffff, $alpha: 0.03);
+}
